tests/snapshots/test_typeinferer__tests__infer13.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer13.plsr\", error_manager)"
---
pure func multiply(x: Int64, y: Int64) -> Int64 {
    return (x: Int64 * y: Int64): Int64
}
pure func square(value: Int64) -> Int64 {
    return multiply(value: Int64, value: Int64): Int64
}
