tests/snapshots/test_typeinferer__tests__infer16.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer16.plsr\", error_manager)"
---
func main() -> Unit {
    let arr = [1: Int64]: Int64[1]
    let first = arr: Int64[1][0: Int64]: Int64
    return
}
func main2() -> Unit {
    let arr = [[1: Int64]: Int64[1]]: Int64[1][1]
    let first = arr: Int64[1][1][0: Int64]: Int64[1]
    return
}
