tests/snapshots/test_typeinferer__tests__parser_1.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(&format!(\"tests/data/infer{}.plsr\", test_num),\n    error_manager.clone())"
---
error[E0009]: tests/data/infer1.plsr:2:25: Unbound function or variable `a`
     │  
   1 │  func main() {
   2 │      let arr: Int[64] = [a, b, ...]
   3 │  }
     │
