tests/snapshots/test_typeinferer__tests__type_inferer_8.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(&format!(\"tests/data/infer{}.plsr\",\n                8)).expect(\"failed to parse/infer input\")"
---
func does_not_return() -> (return: Int64) {}
