tests/snapshots/test_typeinferer__tests__typeinferer-10.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer10.plsr\", error_manager.clone())"
---
func bad() -> Int64 {
    return
}
error[E0010]: tests/data/infer10.plsr:2:5: Failed to unify types `Unit` and `Int64`
     │  
   1 │  func bad() -> Int {
   2 │      return 
            └───── Type inferred here to be `Unit`
   3 │  }
     │
